[package]
name = "libclockrobustus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
ctrlc = "3.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlite = "0.31.0"
zmq = "0.10.0"
